# aiarena-docker-base

./: .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.proxy  Gemfile  README.md  changes.md  config.py  example_config.py  example_local_config.py  pyproject.toml  requirements.txt  requirements_diff.py  run.sh  test_docker_image.sh
.github/: test_docker.yml
.github/workflows/: ci.yml  release.yml  test.yml  test_docker.yml
docker/: Dockerfile.bot  Dockerfile.sc2  docker-compose.yml
sc2linuxbase-docker/: Dockerfile  Dockerfile.base  Dockerfile.bot  Dockerfile.proxy  README.md
