[project]
name = "aiarena-docker"
version = "0.1.0"
description = ""
authors = [{ name = "AI Arena", email = "staff@aiarena.net" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiohttp",
    "aiohttp-jinja2",
    "attrs",
    "burnysc2>=7.0.1",
    "certifi",
    "future",
    "gym",
    "h5py",
    "imutils",
    "jinja2",
    "loguru",
    "more-itertools",
    "multidict",
    "numpy",
    "opencv-contrib-python",
    "opencv-python",
    "pandas",
    "pipenv",
    "portpicker",
    "protobuf",
    "psutil",
    "pydantic",
    "pygame",
    "pyglet",
    "pysc2",
    "python-utils",
    "pyyaml",
    "requests",
    "river",
    "s2clientprotocol",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "six",
    "sqlalchemy",
    "stable-baselines3",
    "tensorflow-cpu>=2.14.1",
    "termcolor",
    "torch",
    "torch-optimizer",
    "torchvision",
    "tqdm",
    "urllib3",
    "uvloop",
    "virtualenv",
    "virtualenv-clone",
    "websockets",
    "yarl",
]

[dependency-groups]
dev = ["black"]

[tool.uv]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cpu" }
torchvision = { index = "torch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
